# modu-emergencybell-mcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  accessible_facility_client.py  animal_facility.py  bus_stop.py  crime_stats.py  datago_common.py  datago_json_client.py  emergency_guide.py  finmap_client.py  health_triage.py  helpers.py  hotlines.py  i18n_support.py  intent_routing.py  juso_client.py  kakao_local.py  landmarks.py  mcp_prompts.py  mcp_tool_result.py  medical_care.py  modu_emergencybell.py  nemc_client.py  odsay_client.py  outdoor_services.py  phrases.py  place_context.py  place_resolver.py  pyproject.toml  region_parse.py  safe182_client.py  safety_bell.py  subway_atm.py  subway_facility.py  tool_descriptions.py  veteran_hospital.py
data/: README.md  api.json
docs/: DEPLOY_KC.md  GLOBAL_KAKAOTALK.md  PLAN.md  README.md  README_Chi.md  README_Eng.md  README_Jpn.md  TOOL_EXAMPLES.md
scripts/: crawl_playmcp.py  final_tool_smoke_test.py  global_tool_tests.py  kakaotalk_tool_tests.py  process_animal_data.py  process_bus_stop_data.py  process_crime_stats_data.py  process_restroom_data.py  process_safety_bell_data.py  process_subway_atm_data.py  process_subway_data.py  process_veteran_hospital_data.py  test_finmap.py  validation_tool_tests_v1.py
server/: Dockerfile  run.sh
src/: __init__.py  coords_transform.py  crime_stats.py  datago_common.py  emergency_guide.py  health_triage.py  helpers.py  hotlines.py  i18n_support.py  intent_routing.py  landmarks.py  map_preview.py  mcp_prompts.py  place_context.py  poi_resolver.py  subway_atm.py  (+4 more)
(+88 files in other folders)
