[project]
name = "modu-emergencybell-mcp"
version = "0.3.0"
description = "modu-emergencybell(모두의비상벨) — PlayMCP emergency guide MCP"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.2.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
modu-emergencybell = "modu_emergencybell:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["source/tests"]
pythonpath = ["source/app", "source", "."]
